@@ -193,11 +193,6 @@ ifeq ($(DEB_HOST_ARCH),alpha)
     LIBGCJ_SONAME	= 71
 endif
 
-ifneq (,$(filter $(DEB_HOST_ARCH), alpha mips mipsel))
-    REQV_GNAT	:= $(REQV_42)
-    CV_GNAT_HACKED := 4.2.3-$(REL_NO_423)
-endif
-
 ifeq ($(DEB_HOST_ARCH),amd64)
 endif
 
@@ -286,9 +281,6 @@ packages := $(filter-out $(no_packages), $(all_packages))
 V_CPP	:= $(shell echo $(CV_CPP)   | sed 's/-[^-]*$$//')
 V_GCC	:= $(shell echo $(CV_GCC)   | sed 's/-[^-]*$$//')
 V_GNAT	:= $(shell echo $(CV_GNAT)  | sed 's/-[^-]*$$//')
-ifneq (,$(CV_GNAT_HACKED))
-  V_GNAT:= $(shell echo $(CV_GNAT_HACKED)   | sed 's/-[^-]*$$//')
-endif
 V_GPP	:= $(shell echo $(CV_GPP)   | sed 's/-[^-]*$$//')
 V_GOBJC	:= $(shell echo $(CV_GOBJC) | sed 's/-[^-]*$$//')
 V_GOBJCXX	:= $(shell echo $(CV_GOBJCXX) | sed 's/-[^-]*$$//')
