@@ -1,8 +1,13 @@
 gcc-defaults (1.70) UNRELEASED; urgency=low
 
+  [Matthias Klose]
   * /usr/share/gcj/debian_defaults: Remove alpha, arm, hppa from
     gcj_archs, remove alpha from gcj_native_archs, add armel to
     gcj_archs and gcj_native_archs.
+
+  [Ludovic Brenta]
+  * make gnat-4.3 the default on alpha, mips and mipsel again, so
+    now all architectures have the same default.  Closes: #475365.
 
  -- Matthias Klose <doko@debian.org>  Tue, 08 Apr 2008 15:56:29 +0200
 
